--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /node_modules
-images/product_avatar
-images/product_img
-images/user_avatar
+/images/product_avatar
+/images/product_img
+/images/user_avatar
 *.env
 *webpack.config.js
 /video
