--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 /node_modules
-images/**/
+# images/**/
+/images/product_avatar/
+/images/product_img/
+/images/user_avatar/
 *.env
 *webpack.config.js
 /video
