--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 /node_modules
 # /images/**/
-images/product_avatar/
-images/product_img/
-images/user_avatar/
+images/*
+# /images/product_avatar/
+# /images/product_img/
+# /images/user_avatar/
 *.env
-*webpack.config.js
-/video
-/videoController.js
+webpack.config.js
+video
+videoController.js
